--- a/fetch_user_details.ipynb
+++ b/fetch_user_details.ipynb
@@ -40,7 +40,7 @@
         "import pandas as pd # Import the pandas library\n",
         "\n",
         "# Load the default configuration\n",
-        "config = oci.config.from_file(\"/home/mallesh2612\")\n",
+        "config = oci.config.from_file(\"/home/automationuser\")\n",
         "AllPredefinedTags = True\n",
         "NoValueString = \"n/a\"\n",
         "FieldSeperator = \",\"\n",
